# python-template

./: Makefile  README.md  cookiecutter.json
.github/workflows/: ci-cd.yml  templates.yml
dockers/python_poetry/: Dockerfile
hooks/: post_gen_project.sh  pre_gen_project.py
tests/example_module/: test_example_app.py
{{cookiecutter.project_slug}}/: CHANGELOG.md  README.md  mypy.ini  pyproject.toml
{{cookiecutter.project_slug}}/src/example_module/: __init__.py  example_app.py
